All images and Youtube embed added

--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
       <h1>Mozilla</h1>
       <!-- insert <img> element, link to the small
           version of the Firefox logo -->
-
+      <img src="/edited/firefox_logo-only_RGB-120.png" alt="Small Firefox Logo">
     </header>
 
     <main>
       <article>
         <!-- insert iframe from youtube -->
-
+        <iframe width="400px" src="https://www.youtube.com/embed/ojcNcvb1olg?si=6mNrA_HONcBacrLl" frameborder="0"></iframe>
         <h2>Rocking the free web</h2>
 
         <p>Mozilla are a global community of technologists, thinkers, and builders, working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
@@ -118,22 +118,23 @@
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img>
+          <img src="/edited/firefox_logo-only_RGB-400.png" alt="Large Firefox Logo">
         </a>
         <a href="https://www.mozilla.org/">
-          <img>
+          <img src="/edited/mozilla-dinosaur-head-400.png" alt="Large Dinosaur Head">
         </a>
         <a href="https://addons.mozilla.org/">
-          <img>
+          <img src="/originals/firefox-addons.jpg" alt="Large Firefox Addons">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img>
+          <img src="/originals/mdn.svg" alt="MDN">
         </a>
         <div class="clearfix"></div>
       </div>
 
       <div class="red-panda">
         <!-- insert picture element -->
+        <img src="/edited/red-panda-1200.jpg" alt="Landscape Red Panda">
       </div>
 
     </main>
