Final commit, header comments

--- a/blank-template.html
+++ b/blank-template.html
@@ -1,3 +1,10 @@
+<!--
+Name: Omair Ahmad
+File: blank-template.html
+Date: 31 January 2024
+Description: Table about various planets data.
+-->
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
