--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!--
+Name: Omair Ahmad
+File: index.html
+Date: 31 January 2024
+Description: Mockup informational website about Mozilla.
+-->
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
