Github Pages fix

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Description: Mockup informational website about Mozilla.
       <h1>Mozilla</h1>
       <!-- insert <img> element, link to the small
           version of the Firefox logo -->
-      <img src="edited/firefox_logo-only_RGB-120.png" alt="Small Firefox Logo">
+      <img src="./edited/firefox_logo-only_RGB-120.png" alt="Small Firefox Logo">
     </header>
 
     <main>
@@ -50,31 +50,31 @@ Description: Mockup informational website about Mozilla.
         <a href="https://www.mozilla.org/en-US/firefox/new/">
           <img
             alt="Firefox Logo"
-            src="edited/firefox_logo-only_RGB-400.png"
-            srcset="edited/firefox_logo-only_RGB-120.png 120w, 
-                    edited/firefox_logo-only_RGB-400.png 400w"
+            src="./edited/firefox_logo-only_RGB-400.png"
+            srcset="./edited/firefox_logo-only_RGB-120.png 120w, 
+                    ./edited/firefox_logo-only_RGB-400.png 400w"
             sizes="(max-width: 500px) 120px, 400px">
         </a>
         <a href="https://www.mozilla.org/">
           <img
             alt="Dinosaur Head"
-            src="edited/mozilla-dinosaur-head-400.png"
-            srcset="edited/mozilla-dinosaur-head-120.png 120w,
-                    edited/mozilla-dinosaur-head-400.png 400w"
+            src="./edited/mozilla-dinosaur-head-400.png"
+            srcset="./edited/mozilla-dinosaur-head-120.png 120w,
+                    ./edited/mozilla-dinosaur-head-400.png 400w"
             sizes="(max-width: 500px) 120px, 400px">
         </a>
         <a href="https://addons.mozilla.org/">
           <img
             alt="Firefox Addons"
-            src="originals/firefox-addons.jpg"
-            srcset="edited/firefox-addons-120.jpg 120w,
-                    /originals/firefox-addons.jpg 400w"
+            src="./originals/firefox-addons.jpg"
+            srcset="./edited/firefox-addons-120.jpg 120w,
+                    ./originals/firefox-addons.jpg 400w"
             sizes="(max-width: 500px) 120px, 400px">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
           <img
             alt="MDN"
-            src="originals/mdn.svg">
+            src="./originals/mdn.svg">
         </a>
         <div class="clearfix"></div>
       </div>
@@ -83,8 +83,8 @@ Description: Mockup informational website about Mozilla.
         <!-- insert picture element -->
         <picture>
           <source media="(min-width: 600px)"
-            srcset="edited/red-panda-1200.jpg">
-          <img src="edited/red-panda-600.jpg"
+            srcset="./edited/red-panda-1200.jpg">
+          <img src="./edited/red-panda-600.jpg"
             alt="Red Panda">
         </picture>
       </div>
